--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -7,28 +7,28 @@ allprojects {
 
 ext {
   //Android libraries
-  appCompat_version = '27.1.0'
-  constraintLayout_version = '1.0.2'
+  appCompat_version = '28.0.0'
+  constraintLayout_version = '2.0.4'
   archComponents_version = '1.1.1'
-  glide_version = '4.0.0'
+  glide_version = '4.12.0'
 
   //Third party libraries
-  kotlin_coroutines_version = '0.26.0'
-  dagger_version = '2.11'
+  kotlin_coroutines_version = '1.4.2'
+  dagger_version = '2.31.2'
   javaxAnnotations_version = '1.0'
   javaxInject_version = '1'
-  retrofit_version = '2.3.0'
-  okhttp_logging_interceptor_version = '3.8.1'
+  retrofit_version = '2.9.0'
+  okhttp_logging_interceptor_version = '5.0.0-alpha.2'
 
   //Unit Testing
-  robolectric_version = '3.8'
-  junit_version = '4.12'
+  robolectric_version = '4.5.1'
+  junit_version = '4.13.1'
   mockito_version = '1.4.0'
   kluent_version = '1.14'
 
   //Acceptance Testing
-  runner_version = '1.0.2-alpha1'
-  espresso_version = '3.0.2-alpha1'
+  runner_version = '1.0.2'
+  espresso_version = '3.0.2'
 
   //Development
   leakCanaryVersion = '1.5'
