--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,7 @@ org.gradle.jvmargs=-Dfile.encoding=UTF-8 -XX:MaxPermSize=512m -Xmx4608M
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 kotlin.incremental=true
+android.useAndroidX=true
+android.enableJetifier=true
+kotlin.code.style=official
+
